<resources>
    <string name="app_name">Project_Just4Gamers</string>
    <string name="tv_splash_mottoT">MUST PLAY</string>
    <string name="header_image">Header_Image</string>
    <string name="tv_loginT">Autentificare</string>
    <string name="tiet_login_emailT">Email ID</string>
    <string name="tv_login_forgot_password">Parola uitată?</string>
    <string name="btn_loginT">LOGIN</string>
    <string name="tv_login_registerBtnT">Nu ai cont? Crează unul <b><u>aici</u></b> </string>
    <string name="tiet_login_passwordT">Password</string>
    <string name="tv_createAccT">CREAZĂ CONT NOU</string>
    <string name="tiet_register_firstNameT">Prenume</string>
    <string name="tiet_register_lastNameT">Nume</string>
    <string name="tiet_register_emailT">Email</string>
    <string name="tiet_register_passwordT">Parola</string>
    <string name="tiet_register_passwordConfirmT">Confirmă parolă</string>
    <string name="cb_register_termsT"><![CDATA[Accept Termenii & Conditiile]]></string>
    <string name="btn_registerT">Înregistrare</string>
    <string name="tv_register_loginBtnT">Ai deja un cont? <b><u>Loghează-te</u></b></string>
    <string name="tiet_emailIdT">Email</string>
    <string name="tv_detailsT">Introdu adresa de e-mail și noi îți vom furniza un mail cu parola nouă.</string>
    <string name="tv_forgotPassT">Ai uitat parola?</string>
    <string name="btn_submitT">SUBMIT</string>
    <string name="mobile_format">0%1$d</string>
    <string name="tv_main_welcome">Welcome aboard, %1$s !</string>
    <string name="tv_settings_name">%1$s %2$s</string>
    <string name="cb_rememberT">Ține-mă minte</string>
    <string name="tv_titleT">PROFIL</string>
    <string name="tv_complete_profile">COMPLETARE PROFIL</string>
    <string name="tv_edit_profile">EDITARE PROFIL</string>
    <string name="iv_profileC">photo</string>
    <string name="tiet_profile_mobileNrT">Număr telefon</string>
    <string name="rb_lbl_male">BARBAT</string>
    <string name="rb_lbl_female">FEMEIE</string>
    <string name="btn_submit">Submit</string>
    <string name="title_orders">Comenzi</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Produse</string>
    <string name="please_click_back_again_to_exit">Apasă din nou pentru iesire</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">Image portrait</string>
    <string name="title_settings">Setări cont</string>
    <string name="lbl_edit">Edit</string>
    <string name="user_name">User Name</string>
    <string name="gender">Gender</string>
    <string name="tv_emailT">Email</string>
    <string name="tv_mobileT">Mobile</string>
    <string name="settings_addressT">Adresă</string>
    <string name="btn_logoutT">LOGOUT</string>
    <string name="action_add_product">Adaugă Produs</string>
    <string name="title_add_product">ADAUGĂ PRODUS</string>
    <string name="product_titleT">Titlu produs</string>
    <string name="product_pricet">Pret (LEI)</string>
    <string name="tv_product_ageT">Alege vechimea produsului tău</string>
    <string name="rb_newT">NOU</string>
    <string name="rb_usedT">UZAT</string>
    <string name="tiet_add_product_descriptionT">Descrierea produsului</string>
    <string name="btn_add_product_submit">SUBMIT</string>
    <string name="tiet_add_product_quantityT">Cantitatea produsului</string>
    <string name="tv_no_productsT">Niciun produs adăugat!</string>
    <string name="tv_no_dashboardItemFound">Niciun produs găsit!</string>
    <string-array name="add_product_age_values">
        <item>1 an</item>
        <item>2 ani</item>
        <item>3 ani</item>
        <item>4 ani</item>
        <item>5 ani</item>
        <item>6 ani</item>
        <item>7 ani</item>
        <item>8 ani</item>
        <item>9 ani</item>
        <item>10 ani</item>
        <item>11 ani</item>
        <item>12 ani</item>
        <item>13 ani</item>
        <item>14 ani</item>
        <item>15 ani</item>
        <item>16 ani</item>
        <item>17 ani</item>
        <item>18 ani</item>
        <item>19 ani</item>
        <item>20 ani</item>
        <item>21 ani</item>
        <item>22 ani</item>
        <item>23 ani</item>
        <item>24 ani</item>
        <item>25 ani</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_item_nameT">Name</string>
    <string name="tv_item_priceT">100 LEI</string>
    <string name="item_price_format">%1$s LEI</string>
    <string name="item_age_format">%1$s ani</string>
    <string name="item_nameT">Item Name</string>
    <string name="item_priceT">100 LEI</string>
    <string name="delete_dialog_title">Sterge produs</string>
    <string name="points_dialog_title">Felicitări!</string>
    <string name="delete_dialog_message">Ești sigur că vrei să-l ștergi?</string>
    <string name="points_dialog_message">Ai primit un număr de %d puncte în urma tranzacției realizate cu succes!</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="product_detailsT">Detalii produs</string>
    <string name="product_titleTT">Product Title</string>
    <string name="tv_productDetPriceT">100 LEI</string>
    <string name="product_descriptionT">Descriere produs</string>
    <string name="this_is_product_details_descriptionT">This is product details description.</string>
    <string name="stock_quantityT">Cantitate stoc:</string>
    <string name="tv_stockT">5</string>
    <string name="btn_lbl_add_to_cart">ADAUGĂ IN COS</string>
    <string name="btn_lbl_go_to_cart">CĂTRE COS</string>
    <string name="title_my_cart">COSUL MEU</string>
    <string name="no_cart_item_found">Nu există produse in cos!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Taxa de transport</string>
    <string name="lbl_total_amount">Total</string>
    <string name="btn_lbl_checkout">PLASEAZĂ COMANDA</string>
    <string name="action_cart">My cart</string>
    <string name="tv_subTotalT">100 LEI</string>
    <string name="tv_shippingT">10 LEI</string>
    <string name="tv_totalT">110 LEI</string>
    <string name="btn_checkoutT">PLASEAZĂ COMANDA</string>
    <string name="cartTitle">Cos</string>
    <string name="cart_item_titleT">Cart Item Title</string>
    <string name="tv_carPriceT">100 LEI</string>
    <string name="tv_cart_quantityT">1</string>
    <string name="lbl_out_of_stock">STOC EPUIZAT</string>
    <string name="msg_item_removed_successfully">Produsul a fost șters cu succes!</string>
    <string name="msg_for_available_stock">Cantitatea din stoc este %1$s! Nu poți adauga mai multe produse! </string>
    <string name="title_address_list">LISTĂ ADRESE</string>
    <string name="no_address_found">Nicio adresă gasită!</string>
    <string name="lbl_add_address">Adaugă adresă</string>
    <string name="title_add_address">Adaugă adresă</string>
    <string name="hint_fullName">Nume complet</string>
    <string name="hint_phone_number">Număr mobil</string>
    <string name="hint_address">Adresă</string>
    <string name="hint_zip_code">Cod Zip</string>
    <string name="hint_additional_note">Notă aditională</string>
    <string name="hint_other_details">Alte detalii</string>
    <string name="lbl_home">ACASA</string>
    <string name="lbl_office">FIRMA</string>
    <string name="lbl_other">ALTCEVA</string>
    <string name="tv_address_fullNameT">Nume</string>
    <string name="tv_address_typeT">Acasă</string>
    <string name="tv_address_detailsT">Detalii</string>
    <string name="tv_address_mobileNrT">Număr mobil</string>
    <string name="address_details">%1$s, %2$s</string>
    <string name="title_edit_address">EDITEAZĂ ADRESĂ</string>
    <string name="btn_update">MODIFICĂ</string>
    <string name="address_update_success">Adresa a fost modificată cu sucess!</string>
    <string name="err_update_success">Adresa nu a fost modificată!</string>
    <string name="title_select_address">SELECTEAZĂ ADRESĂ</string>
    <string name="title_checkout">PLASEAZĂ COMANDA</string>
    <string name="checkout_lbl_product_items">Produsele tale</string>
    <string name="checkout_lbl_selected_address">Adresa selectată</string>
    <string name="checkout_lbl_items_receipt">Chitanță</string>
    <string name="lbl_payment_mode">Modalitate de plată</string>
    <string name="lbl_cash_on_delivery">Ramburs</string>
    <string name="btn_lbl_place_order">FINALIZEAZĂ COMANDA</string>
    <string name="tv_addressTypeT">Acasa</string>
    <string name="tv_checkout_fullNameT">Nume</string>
    <string name="tv_checkout_addressT">Adresă</string>
    <string name="tv_checkout_additionalNoteT">Notă optională</string>
    <string name="tv_checkout_otherDetails">Alte detalii</string>
    <string name="tv_checkout_mobileNrT">Număr mobil</string>
    <string name="tv_checkout_subtotalT">100 LEI</string>
    <string name="t_checkout_shippingCharge">10.0 LEI</string>
    <string name="tv_checkout_totalT">110 LEI</string>
    <string name="no_order_placed_yett">Nicio comandă plasată!</string>
    <string name="title_order_details">DETALII COMANDĂ</string>
    <string name="order_details_lbl">DETALII COMANDĂ</string>
    <string name="order_details_lbl_order_id">ID Comandă</string>
    <string name="order_details_lbl_order_date">Dată comandă</string>
    <string name="order_details_lbl_order_status">Status comandă</string>
    <string name="order_status_pending">În curs de livrare</string>
    <string name="order_details_lbl_shipping_address">Adresa de livrare</string>
    <string name="order_status_inProcess">În curs</string>
    <string name="order_status_delivered">Livrat</string>
    <string name="tv_order_detailsIdT">12345</string>
    <string name="tv_orderDetailsDateT">22 02 2020</string>
    <string name="title_soldProducts">Produse vândute</string>
    <string name="no_products_sold_out_Yet">Niciun produs vândut!</string>
    <string name="title_sold_product_details">DETALII PRODUSE</string>
    <string name="tv_settings_pointsT">Puncte</string>
    <string name="tv_item_ageT">Vechime</string>
    <string name="tv_productDetails_ageT">Vechime</string>
    <string name="couponsT">Cupoane</string>
    <string name="tv_dashboard_item_ageT">Vechime</string>
    <string name="my_discount_couponsT">CUPOANELE MELE</string>
    <string name="discount_coupon_10T">CUPON REDUCERE BRONZE (10%)</string>
    <string name="btn_type0T">DEBLOCHEAZĂ CUPON PENTRU 500 PUNCTE</string>
    <string name="discount_coupon_15T">CUPON REDUCERE SILVER (15%)</string>
    <string name="btn_type1T">DEBLOCHEAZĂ CUPON PENTRU 1000 PUNCTE</string>
    <string name="discount_coupon_25T">CUPON REDUCERE GOLD (25%)</string>
    <string name="btn_type2T">DEBLOCHEAZĂ CUPON PENTRU 2000 PUNCTE</string>
    <string name="your_pointsT">Punctele tale</string>
    <string name="pointsTT">0</string>
    <string name="tv_item_typeT">Cupon de 10%</string>
    <string name="my_discount_couponsTT">CUPOANELE MELE DE REDUCERE</string>
    <string name="no_discount_coupon_foundT">Nu deții niciun cupon de reducere!</string>
    <string name="discount_statusT">Discount status</string>
    <string name="tv_discountActiveT">ACTIV</string>
    <string name="add_discount_couponT">ADAUGĂ CUPON DE DISCOUNT</string>
    <string name="tv_progress_textT">Please wait</string>
    <string name="tiet_dashboard_searchT">Caută…</string>
    <string name="search_productT">Caută produs…</string>
    <string name="btn_dasboard_filterT">Filtare</string>
    <string name="action_boxT">Mesajele mele</string>
    <string name="tv_title_inboxT">Inbox</string>
    <string-array name="filter_items">
        <item>Cel mai mare preț</item>
        <item>Cel mai mic preț</item>
        <item>A -> Z</item>
        <item>Z -> A</item>
        <item>Cel mai vechi produs</item>
        <item>Cel mai nou produs</item>
    </string-array>
    <string name="title_activity_inbox">InboxActivity</string>
</resources>