<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_podium"
          android:icon="@drawable/ic_trophy_vecotr"
          android:title="Podium"
          app:showAsAction="always"/>

    <item android:id="@+id/action_inbox"
        android:icon="@drawable/ic_message_vector"
        android:title="@string/action_boxT"
        app:showAsAction="always"/>

    <item android:id="@+id/action_coupons"
        android:icon="@drawable/ic_vector_coupon"
        android:title="@string/couponsT"
        app:showAsAction="always"/>

    <item android:id="@+id/action_setting"
          android:icon="@drawable/ic_vector_settings"
          android:title="@string/action_settings"
          app:showAsAction="always"/>


</menu>