<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_login_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/header_image"
            android:contentDescription="@string/header_image" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_loginT"
        app:layout_constraintTop_toBottomOf="@id/fl_login_header_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_email"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/textview_format"
            android:hint="@string/tiet_register_emailT"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="@dimen/auth_login_email_width"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/til_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@drawable/textview_format"
            android:hint="@string/tiet_login_passwordT"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_loginT"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_fbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_login_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_registerBtnT"
        app:layout_constraintTop_toBottomOf="@id/btn_fbLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:clickable="true" />

    <CheckBox
        android:id="@+id/cb_login_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_rememberT"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:checked="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>