<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_productDetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_productDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingRight="10dp"
            android:paddingLeft="0dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/product_detailsT"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_productDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product_details_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorImageViewBackground"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_description"/>

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_details_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_productDetails_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_titleT"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_productDetails_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_productDetails_ageT"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_productDetails_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_productDetPriceT" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price"
                android:text="@string/product_descriptionT"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/tv_product_detailsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_description"
                android:text="@string/this_is_product_details_descriptionT"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_product_detailsDescription"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/lbl_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/stock_quantityT"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:id="@+id/tv_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rv_item_stock_quantity_background"
                    android:textSize="20sp"
                    android:text="@string/tv_stockT"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_lbl_add_to_cart"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_quantity"
                />

            <Button
                android:id="@+id/btn_go_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/btn_lbl_go_to_cart"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>