<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.OrderDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_discount_coupons"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/redError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/my_discount_couponsT"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"
            android:paddingLeft="@dimen/toolbar_title_paddingStart"
            android:paddingRight="0dp" />


    </androidx.appcompat.widget.Toolbar>



    <ScrollView
        android:id="@+id/sv_discounts"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_discount_coupons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginTop="-20dp"
            android:background="@drawable/discount_background">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/your_pointsT"
                android:layout_marginLeft="50dp" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/pointsTT"
                android:gravity="center_horizontal" />


        </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="#C86422"
                android:text="@string/discount_coupon_10T"
                android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rv_item_image_background"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_product_item_image0"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ticket0"/>
        </LinearLayout>

            <Button
                android:id="@+id/btn_discountType0"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btn_type0T"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="#E7E5E3"
                android:text="@string/discount_coupon_15T"
                android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rv_item_image_background"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_product_item_image1"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                />
        </LinearLayout>

            <Button
                android:id="@+id/btn_discountType1"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btn_type1T"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="#F4D03F"
                android:text="@string/discount_coupon_25T"
                android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rv_item_image_background"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_product_item_image"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ticket2"/>
        </LinearLayout>

            <Button
                android:id="@+id/btn_discountType2"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btn_type2T"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>